Add AVS2 decoding support to FFmpeg

--- a/src/modules/codec/CMakeLists.txt
+++ b/src/modules/codec/CMakeLists.txt
@@ -3,12 +3,15 @@ include_directories(${CMAKE_SOURCE_DIR}/3rdparty/ffmpeg/include)
 #set(FFMPEG_LIB_PATH ${CMAKE_SOURCE_DIR}/3rdparty/ffmpeg/lib)
 set(FFMPEG_LIB_PATH ${CMAKE_SOURCE_DIR}/3rdparty/ffmpeg/lib/${CMAKE_SYSTEM_PROCESSOR})
 
+include_directories(${CMAKE_SOURCE_DIR}/3rdparty/uavs3d/include)
+set(UAVS3D_LIB_PATH ${CMAKE_SOURCE_DIR}/3rdparty/uavs3d/lib/${CMAKE_SYSTEM_PROCESSOR})
 
 find_library(FFMPEG_AVCODEC avcodec PATHS ${FFMPEG_LIB_PATH} NO_DEFAULT_PATH)
 find_library(FFMPEG_AVFORMAT avformat PATHS ${FFMPEG_LIB_PATH} NO_DEFAULT_PATH)
 find_library(FFMPEG_AVUTIL avutil PATHS ${FFMPEG_LIB_PATH} NO_DEFAULT_PATH)
 find_library(FFMPEG_SWSCALE swscale PATHS ${FFMPEG_LIB_PATH} NO_DEFAULT_PATH)
 find_library(FFMPEG_SWRESAMPLE swresample PATHS ${FFMPEG_LIB_PATH} NO_DEFAULT_PATH)
+find_library(FFMPEG_UAVS3D uavs3d PATHS ${UAVS3D_LIB_PATH} NO_DEFAULT_PATH)
 
 find_library(NVCUVID_LIBRARIES nvcuvid PATHS ${CUDA_LIB_DIR} NO_DEFAULT_PATH)
 find_library(NVJPEG_LIBRARIES  nvjpeg PATHS ${CUDA_LIB_DIR} NO_DEFAULT_PATH)
@@ -22,8 +25,9 @@ add_library(Codec STATIC
 
 # 链接第三方库和Common库
 target_link_libraries(Codec 
-    Common 
+    Common
     ${FFMPEG_AVCODEC}
+    ${FFMPEG_UAVS3D}
     ${FFMPEG_AVFORMAT}
     ${FFMPEG_AVUTIL}
     ${FFMPEG_SWSCALE}
